--- a/workflows/docker-publish.yml
+++ b/workflows/docker-publish.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main  # Set a branch to trigger the workflow
+      - main  # Set a branch to trigger the workflows
 
 jobs:
   build-and-push:
