--- a/workflows/docker-publish.yml
+++ b/workflows/docker-publish.yml
@@ -20,7 +20,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/final-python-app:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/final-python:latest .
 
       - name: Push Docker Image to DockerHub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/final-python-app:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/final-python:latest
