--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,11 +16,11 @@ jobs:
       - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/final-python:latest .
+        run: docker build -t ${{ secrets.DOCKER_USER }}/final-python:latest .
 
       - name: Push Docker Image to DockerHub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/final-python:latest
+        run: docker push ${{ secrets.DOCKER_USER }}/final-python:latest
